syntax="proto3";
package user;
option go_package="micromango/pkg/grpc/user";

import "google/protobuf/timestamp.proto";

service User {
  rpc Register(RegisterRequest) returns (UserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Auth(AuthRequest) returns (UserResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message UserResponse {
  string userId = 1;
  string username = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  google.protobuf.Timestamp accessTokenExpired = 2;
  string refreshToken = 3;
  google.protobuf.Timestamp refreshTokenExpired = 4;
}

message AuthRequest {
  string token = 1;
}